package cn.zhanghub.designPattern.command.cmd1.light;

/**
 * 类描述：
 *
 * @ClassName Light
 * @Author 张文军
 * @Date 2021/6/14 21:34
 * @Version 1.0
 */

public interface Light {
    void openLight();

    void closeLight();
}
