package cn.zhanghub.designPattern.command.cmd2.command;

/**
 * 类描述：
 *
 * @ClassName Command
 * @Author 张文军
 * @Date 2021/6/15 0:25
 * @Version 1.0
 */

public interface Command {
    /**
     * 发出命令
     */
    public void exe();
}
